# hw2

./: CMakeLists.txt  Makefile  hw.cpp  hw.h  main.cpp
